k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: govuk-route-library
    component: frontend
  name: govuk-route-library
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: govuk-route-library
  sessionAffinity: None
  type: ClusterIP
